# TrabalhoCores

./: CMakeLists.txt
TrabalhoCores/: CMakeLists.txt  Shader.cpp  Shader.h  TrabalhoCores.cpp
TrabalhoCores/Triangle/: Triangle.cpp  Triangle.frag  Triangle.h  Triangle.vert
glad/include/glad/: glad.h
glad/src/: glad.c
